RESOLVED FIXED204167
Fix some WebGPU demos
https://bugs.webkit.org/show_bug.cgi?id=204167
Summary Fix some WebGPU demos
Dean Jackson
Reported 2019-11-13 11:07:16 PST
Fix some WebGPU demos
Attachments
Patch (14.84 KB, patch)
2019-11-13 11:11 PST, Dean Jackson
mmaxfield: review+
commit-queue: commit-queue-
Archive of layout-test-results from webkit-cq-03 for mac-highsierra (4.36 MB, application/zip)
2019-11-13 12:07 PST, WebKit Commit Bot
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-13 11:07:51 PST
Dean Jackson
Comment 2 2019-11-13 11:11:54 PST
WebKit Commit Bot
Comment 3 2019-11-13 12:07:36 PST
Comment on attachment 383472 [details] Patch Rejecting attachment 383472 [details] from commit-queue. New failing tests: inspector/model/remote-object-weak-collection.html Full output: https://webkit-queues.webkit.org/results/13247990
WebKit Commit Bot
Comment 4 2019-11-13 12:07:38 PST
Created attachment 383478 [details] Archive of layout-test-results from webkit-cq-03 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-03 Port: mac-highsierra Platform: Mac OS X 10.13.6
Dean Jackson
Comment 5 2019-11-13 12:26:12 PST
Aakash Jain
Comment 6 2019-11-13 13:18:57 PST
(In reply to WebKit Commit Bot from comment #3) > New failing tests: > inspector/model/remote-object-weak-collection.html Tracked in https://bugs.webkit.org/show_bug.cgi?id=202932
Alexey Proskuryakov
Comment 7 2019-11-14 21:51:13 PST
Comment on attachment 383472 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383472&action=review > Websites/webkit.org/demos/webgpu/textured-cube.html:83 > +//console.log(`Shader is: ${shader}`); Uh-oh
Note You need to log in before you can comment on or make changes to this bug.