Fix some WebGPU demos https://bugs.webkit.org/show_bug.cgi?id=204167 Source/WebCore:

<rdar://problem/57160316>

Reviewed by Myles C. Maxfield.

Add a note referencing a bug I detected while fixing this demo.
And a drive-by typo.

* Modules/webgpu/WebGPUBuffer.cpp:
(WebCore::WebGPUBuffer::rejectOrRegisterPromiseCallback):
* platform/graphics/gpu/cocoa/GPUCommandBufferMetal.mm:
(WebCore::GPUCommandBuffer::copyBufferToTexture):

Websites/webkit.org:

Reviewed by Myles C. Maxfield.

Use COPY_ rather than TRANSFER_.

* demos/webgpu/babylon/babylonWebGpu.max.js:
* demos/webgpu/babylon/oneSphereWebGPU.html:
* demos/webgpu/hello-cube.html:
* demos/webgpu/scripts/compute-boids-compile.js:
* demos/webgpu/scripts/compute-boids-utils.js:
(async.createTextureFromImage):
* demos/webgpu/textured-cube.html:

Canonical link: https://commits.webkit.org/217466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252423 268f45cc-cd09-0410-ab3c-d52691b4dbfc